# cursova_2026

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  todo
benchmark/ecommerce/: cleanup.py  instruction  locustfile.py  results_stats.csv  seed.py
db_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
monitoring/: prometheus.yml
services/ecommerce/mongo/: Dockerfile
services/ecommerce/mongo/app/: crud.py  database.py  main.py  models.py  schemas.py
services/ecommerce/neo4j/: Dockerfile
services/ecommerce/neo4j/app/: crud.py  database.py  main.py  metrics.py  models.py
services/ecommerce/postgres/: Dockerfile
services/ecommerce/postgres/app/: crud.py  database.py  main.py  metrics.py  models.py  schemas.py
services/ecommerce/redis/: Dockerfile
services/ecommerce/redis/app/: crud.py  database.py  main.py  models.py  schemas.py
